<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/client_list_header_dark_grey"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <org.ei.opensrp.view.customControls.CustomFontTextView
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/search_limits"
            android:textSize="@dimen/advanced_search_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/myRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/out_and_inside"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/out_and_inside"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:buttonTint="@color/light_blue"
                    android:text="@string/out_and_inside"
                    android:textSize="@dimen/advanced_search_text_size" />

                <RadioButton
                    android:id="@+id/my_catchment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:buttonTint="@color/light_blue"
                    android:text="@string/my_catchment_area"
                    android:textSize="@dimen/advanced_search_text_size" />
            </RadioGroup>
        </LinearLayout>

        <org.ei.opensrp.view.customControls.CustomFontTextView
            style="@style/CustomFontTextViewStyle.ClientList.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/client_status"
            android:textSize="@dimen/advanced_search_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <CheckBox
                android:id="@+id/active"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/light_blue"
                android:text="@string/active"
                android:textSize="@dimen/advanced_search_text_size" />

            <CheckBox
                android:id="@+id/inactive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/light_blue"
                android:text="@string/inactive"
                android:textSize="@dimen/advanced_search_text_size" />

            <CheckBox
                android:id="@+id/lost_to_follow_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/light_blue"
                android:text="@string/lost_to_follow_up"
                android:textSize="@dimen/advanced_search_text_size" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <org.ei.opensrp.view.customControls.CustomFontTextView
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/zeir_id"
                android:textSize="@dimen/advanced_search_text_size" />

            <EditText
                android:id="@+id/zeir_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zeir_id_hint"
                android:inputType="text"
                android:textSize="@dimen/advanced_search_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <org.ei.opensrp.view.customControls.CustomFontTextView
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/first_name"
                android:textSize="@dimen/advanced_search_text_size" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint"
                android:inputType="text"
                android:textSize="@dimen/advanced_search_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <org.ei.opensrp.view.customControls.CustomFontTextView
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/last_name"
                android:textSize="@dimen/advanced_search_text_size" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint"
                android:inputType="text"
                android:textSize="@dimen/advanced_search_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <org.ei.opensrp.view.customControls.CustomFontTextView
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/mother_guardian_name"
                android:textSize="@dimen/advanced_search_text_size" />

            <EditText
                android:id="@+id/mother_guardian_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mother_guardian_name_hint"
                android:inputType="text"
                android:textSize="@dimen/advanced_search_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <org.ei.opensrp.view.customControls.CustomFontTextView
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/mother_guardian_nrc"
                android:textSize="@dimen/advanced_search_text_size" />

            <EditText
                android:id="@+id/mother_guardian_nrc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mother_guardian_nrc_hint"
                android:inputType="text"
                android:textSize="@dimen/advanced_search_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <org.ei.opensrp.view.customControls.CustomFontTextView
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/mother_guardian_phone_number"
                android:textSize="@dimen/advanced_search_text_size" />

            <EditText
                android:id="@+id/mother_guardian_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mother_guardian_phone_number_hint"
                android:inputType="text"
                android:textSize="@dimen/advanced_search_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <org.ei.opensrp.view.customControls.CustomFontTextView
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/date_birth_range"
                android:textSize="@dimen/advanced_search_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/start_date_hint"
                    android:inputType="text"
                    android:textSize="@dimen/advanced_search_text_size" />

                <EditText
                    android:id="@+id/end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/end_date_hint"
                    android:inputType="text"
                    android:textSize="@dimen/advanced_search_text_size" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/search"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/advanced_search_bg"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>